Fixed project buttons on mobile

--- a/styles.css
+++ b/styles.css
@@ -250,6 +250,7 @@ p.status.onh{
     }
     .hero-btn2{
         margin-top:10%;
+        padding:15px;
     }
 }
 
@@ -503,6 +504,7 @@ p{
 
 .about-us .wwd p{
     font-size:17px;
+    text-align:left;
 }
 .about-us .wwd h2{
     color:#41bfea;
@@ -917,10 +919,10 @@ p{
     }
     .project-container .project-box .project-buttons{
         padding-top:5px;
-        
+        font-size:15px;
     }
     .project-container .project-box .project-buttons .hero-btn2{
-        font-size:10px;
+        font-size:13px;
         margin-top:10px;
     }
 }
